2001-08-13  Drew Csillag  <drew@naxos.starmedia.net>

	* configure.in, configure, docs/opman/opman.tex: no longer require
	bash since nothing appears to use it.  Also, don't care whose
	xargs we use -- removed GNU dependancy.  Cleaned up configure.in a
	bit (mostly removed a bunch of commented out things).

############################################################
	
	* 3.0 Beta 2 recut.

2001-08-12  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler/Session.py (untouch): altered session handler
	so if a session is manually saved, it will not be subsequently touched in the same request.

	* SkunkWeb/SkunkWeb/Hooks.py (KeyedHook.__call__): better fix
	to DEBUG import problem.

2001-08-12  Drew Csillag  <drew@naxos.starmedia.net>

	* configure, configure.in, SkunkWeb/Makefile.in,
	SkunkWeb/Services/Makefile.in, SkunkWeb/mod_skunkweb/Makefile.in,
	pylibs/Makefile.in: Now no longer require GNU install.  Remove all
	places where it was called with -D

2001-08-12  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler/PostgreSQLSessionStore.py, 
	SkunkWeb/Services/sessionHandler/__init__.py: added a PostgreSQL-
	based session store, this time using PyDO.
	
2001-08-11  Drew Csillag  <drew@naxos.starmedia.net>

	* docs/stmlrefer/stmlrefer.tex: added doc about the new as
	parameter to the <:import:> tag

	* pylibs/DT/DTTags.py: added the as optional parameter to
	the <:import:> tag.

	* pylibs/PostgreSql/__init__.py: now catches the right exception
	and fixed the way it called the pgdb.connect function to just call
	it directly instead of using apply()

	* docs/PyDO/PyDO.tex: Added 

2001-08-10  Drew Csillag  <drew@starmedia.net>

        * pylibs/PyDO/doc: added info on connect strings
	 
	* pylibs/PyDO/postconn.py, pylibs/PyDO/oracleconn.py: added the
	cache option to the connect strings.
	
	* SkunkWeb/Services/templating/HTMLTags.py: fixed redirect tag.  It
	was totally broken.
	